<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/editTextTargetX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_x"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/editTextTargetY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_y"
        android:inputType="numberDecimal"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonSaveCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_hint"
        android:textSize="12sp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

</LinearLayout>