<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/buttonTriggerMagic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_trigger_magic"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonOpenSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_open_settings"/>

</LinearLayout>